--- a/index.html
+++ b/index.html
@@ -61,7 +61,26 @@
  <input class="bg-slate-300 border w-24 px-5 text-black" type="text " id="height-Parallelogram"   placeholder="height">
  <span class="ml-2">cm</span>                           
   </p>
-  <p class="text-2xl" > Area :<span class="font-bold" id="triangle-area"> 0 </span></p>
+  <p class="text-2xl" > Area :<span class="font-bold" id="Parallelogram-area"> 0 </span></p>
+   <div class="card-actions justify-end">
+     <button onclick="calculateParallelogramArea()" id="" class="btn btn-primary w-full">Calculate</button>
+   </div>
+  </div>
+  </div>
+      <!--Ellipsis -card                         -->
+
+ <div class="card w-96 bg-base-100 shadow-xl mt-5">
+  <figure><img src="/images/parallelogram.png" alt="Shoes" /></figure>
+  <div class="card-body text-center">
+   <h2 class="card-title text-3xl justify-center ">Ellipsis</h2>
+   <p> Area (A) = b X h</p>
+  <p>
+ <input class="bg-slate-300 border w-24 px-5" type="text " id="base-Parallelogram" placeholder="Base">
+ <span class="ml-2">cm</span>
+ <input class="bg-slate-300 border w-24 px-5 text-black" type="text " id="height-Parallelogram"   placeholder="height">
+ <span class="ml-2">cm</span>                           
+  </p>
+  <p class="text-2xl" > Area :<span class="font-bold" id="Parallelogram-area"> 0 </span></p>
    <div class="card-actions justify-end">
      <button onclick="calculateParallelogramArea()" id="" class="btn btn-primary w-full">Calculate</button>
    </div>
