--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
   <figure><img src="/images/parallelogram.png" alt="Shoes" /></figure>
   <div class="card-body text-center">
    <h2 class="card-title text-3xl justify-center ">Ellipsis</h2>
-   <p> Area (A) = b X h</p>
+   <p> Area (A) = πab </p>
   <p>
- <input class="bg-slate-300 border w-24 px-5" type="text " id="base-Parallelogram" placeholder="Base">
+ <input class="bg-slate-300 border w-24 px-5" type="text " id="major-radius" placeholder="Base">
  <span class="ml-2">cm</span>
- <input class="bg-slate-300 border w-24 px-5 text-black" type="text " id="height-Parallelogram"   placeholder="height">
+ <input class="bg-slate-300 border w-24 px-5 text-black" type="text " id="minor-radius"   placeholder="height">
  <span class="ml-2">cm</span>                           
   </p>
-  <p class="text-2xl" > Area :<span class="font-bold" id="Parallelogram-area"> 0 </span></p>
+  <p class="text-2xl" > Area :<span class="font-bold" id="elipsis-area" class="btn btn-primary w-full"> 0 </span></p>
    <div class="card-actions justify-end">
-     <button onclick="calculateParallelogramArea()" id="" class="btn btn-primary w-full">Calculate</button>
+     <button onclick="calculateEllipsisArea()" id="" class="btn btn-primary w-full">Calculate</button>
    </div>
   </div>
   </div>
