--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <!--Ellipsis -card                         -->
 
  <div class="card w-96 bg-base-100 shadow-xl mt-5">
-  <figure><img src="/images/parallelogram.png" alt="Shoes" /></figure>
+  <figure><img src="/images/ellipse.png" alt="Shoes" /></figure>
   <div class="card-body text-center">
    <h2 class="card-title text-3xl justify-center ">Ellipsis</h2>
    <p> Area (A) = πab </p>
