--- a/index.html
+++ b/index.html
@@ -86,6 +86,25 @@
    </div>
   </div>
   </div>
+      <!--pentagon -card                         -->
+
+ <div class="card w-96 bg-base-100 shadow-xl mt-5">
+  <figure><img src="/images/pentagon.png" alt="Shoes" /></figure>
+  <div class="card-body text-center">
+   <h2 class="card-title text-3xl justify-center ">Pentagon</h2>
+   <p> Area (A) = 0.5 X p X b </p>
+  <p>
+ <input class="bg-slate-300 border w-24 px-5" type="text " id="press" placeholder="Base">
+ <span class="ml-2">cm</span>
+ <input class="bg-slate-300 border w-24 px-5 text-black" type="text " id="base"   placeholder="height">
+ <span class="ml-2">cm</span>                           
+  </p>
+  <p class="text-2xl" > Area :<span class="font-bold" id="pentagon-area" class="btn btn-primary w-full"> 0 </span></p>
+   <div class="card-actions justify-end">
+     <button onclick="calculatePentagonArea()" id="" class="btn btn-primary w-full">Calculate</button>
+   </div>
+  </div>
+  </div>
         </main> 
 <script src="index.js"></script>                   
 </body>
