java script added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
       <!-- Triangle-card                         -->
 
- <div class="card w-96 bg-base-100 shadow-xl mt-5">
-  <figure><img src="/images/triangle.png" alt="Shoes" /></figure>
+ <div class="card w-96 bg-base-100 shadow-xl mt-5 bg-orange-100">
+  <figure><img src="./images/triangle.png" alt="Shoes" /></figure>
   <div class="card-body text-center">
    <h2 class="card-title text-3xl justify-center ">Triangle</h2>
    <p> Area (A) = 0.5 X b X h</p>
@@ -31,8 +31,8 @@
   </div>
       <!-- Rectangle-card                         -->
 
- <div class="card w-96 bg-base-100 shadow-xl mt-5">
-  <figure><img src="/images/rectangle.png" alt="Shoes" /></figure>
+ <div class="card w-96 bg-base-100 shadow-xl mt-5 bg-orange-200">
+  <figure><img src="./images/rectangle.png" alt="Shoes" /></figure>
   <div class="card-body text-center">
    <h2 class="card-title text-3xl justify-center ">Rectangle</h2>
    <p> Area (A) = w X l </p>
@@ -50,8 +50,8 @@
   </div>
       <!-- Parallelogram-card                         -->
 
- <div class="card w-96 bg-base-100 shadow-xl mt-5">
-  <figure><img src="/images/parallelogram.png" alt="Shoes" /></figure>
+ <div class="card w-96 bg-base-100 shadow-xl mt-5 bg-orange-200">
+  <figure><img src="./images/parallelogram.png" alt="Shoes" /></figure>
   <div class="card-body text-center">
    <h2 class="card-title text-3xl justify-center ">Parallelogram</h2>
    <p> Area (A) = b X h</p>
@@ -69,8 +69,8 @@
   </div>
       <!--Ellipsis -card                         -->
 
- <div class="card w-96 bg-base-100 shadow-xl mt-5">
-  <figure><img src="/images/ellipse.png" alt="Shoes" /></figure>
+ <div class="card w-96 bg-base-100 shadow-xl mt-5 bg-orange-200">
+  <figure><img src="./images/ellipse.png" alt="Shoes" /></figure>
   <div class="card-body text-center">
    <h2 class="card-title text-3xl justify-center ">Ellipsis</h2>
    <p> Area (A) = πab </p>
@@ -88,8 +88,8 @@
   </div>
       <!--pentagon -card                         -->
 
- <div class="card w-96 bg-base-100 shadow-xl mt-5">
-  <figure><img src="/images/pentagon.png" alt="Shoes" /></figure>
+ <div class="card w-96 bg-base-100 shadow-xl mt-5 bg-orange-100">
+  <figure><img src="./images/pentagon.png" alt="Shoes" /></figure>
   <div class="card-body text-center">
    <h2 class="card-title text-3xl justify-center ">Pentagon</h2>
    <p> Area (A) = 0.5 X p X b </p>
