--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
    <h2 class="card-title text-3xl justify-center ">Triangle</h2>
    <p> Area (A) = 0.5 X b X h</p>
   <p>
- <input class="bg-slate-300 border w-24 px-5" type="text " id="base-triangle" placeholder="Base">
+ <input type="number" class="bg-slate-300 border w-24 px-5"  id="base-triangle" placeholder="Base">
  <span class="ml-2">cm</span>
- <input class="bg-slate-300 border w-24 px-5 text-black" type="text " id="height-triangle"   placeholder="height">
+ <input type="number" class="bg-slate-300 border w-24 px-5 text-black"  id="height-triangle"   placeholder="height">
  <span class="ml-2">cm</span>                           
   </p>
   <p class="text-2xl" > Area :<span class="font-bold" id="triangle-area"> 0 </span> cm<sup>2</sup></p>
